[package]
name = "bank"
version = "0.1.0"
authors = ["Tommy Pujol <tommy@pujol.cf>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
cuda-runtime-sys = "0.3.0-alpha.1"
strum = "0.20"
strum_macros = "0.20"
rand = { version =  "0.8.3", features = ["std", "std_rng"] }

[profile.release]
opt-level = 3
panic = "abort"
