cargo-features = ["strip"]

[package]
name = "bank"
version = "0.1.0"
authors = ["Tommy Pujol <jpujolmonoz5@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
cuda-runtime-sys = "0.3.0-alpha.1"
strum = "0.20"
strum_macros = "0.20"
rand = { version =  "0.8.3", features = ["std", "std_rng"] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
panic = "abort"
debug = false
strip = "symbols"

